--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aiogram-throttling"
+name = "aiogram-middlewares"
 version = "0.0.1"
 description = "Useful middlewares for aiogram bots =)"
 authors = ["BlackCatDevel0per <bcdev@mail.ru>"]
@@ -7,11 +7,10 @@ license = "Apache 2.0"
 readme = "README.md"
 
 classifiers = [
-    "License :: OSI Approved :: Apache 2.0 License",
+    "License :: OSI Approved :: Apache Software License",
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Framework :: AsyncIO",
-    "Framework :: AIOgram",
     "Typing :: Typed",
     "Intended Audience :: Developers",
     "Intended Audience :: System Administrators",
@@ -22,8 +21,6 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Communications :: Chat",
-    "Topic :: Communications :: GitHub",
-    "Topic :: Communications :: GitHub",
 ]
 
 [tool.ruff]
@@ -96,7 +93,7 @@ ignore = [
 [flake8-quotes]
 inline-quotes = "single"
 
-src = ["."]
+src = ["src/aiogram_middlewares", "tests", "scripts", "examples"]
 exclude = [
     ".git",
     "build",
