--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ indent-style = "tab"
 python = ">=3.8,<4.0"
 brotli = {version = "^1.1.0", optional = true}
 aiogram = "^3.1.1"
+rich = "^13.6.0"
 
 [tool.poetry.extras]
 optional = ['brotli']
