--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ dist
 # In TODOs..
 scripts/simulate_updates_throttle.py
 examples/echo_bot_throttle.py
+examples/echo_bot_command_trigger.py
+scripts/simulate_updates_throttle_minimal.py
